--- a/pm-proj006/mobile.css
+++ b/pm-proj006/mobile.css
@@ -1,13 +1,19 @@
 /* definições de atributos de tamanho de tela para responsividade = mida query (consulta de acordo com a midia: monitor, celular, etc */
 
+
+
 .container {
         width: 960px;
+        height: 1024px;
         margin: 0 auto;
+        
     } 
-     .noticia {
+
+.noticia {
         width: 300px;
+        height: 169px;
         padding-right: 20px;
-        float:left; /* tag que coloca uma div ao lado da outra */
+        float:left;
     }
 
 
