--- a/pm-proj007/estilo.css
+++ b/pm-proj007/estilo.css
@@ -1,16 +1,17 @@
 body{
-    
+    font-family: lato, sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 .container {
-    width: 960px;
+    max-width: 960px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
 }
 
 header{
-    margin-bottom: -80px;
+    margin-bottom: -90px;
 }
 header h1{
     margin: 0;
@@ -18,6 +19,8 @@ header h1{
     background-repeat: no-repeat;
     width: 177px;
     height: 78px;
+    margin-top: 10px;
+    
 }
 
 header h1 span {
@@ -28,6 +31,28 @@ header h1 span {
 header nav li{
     list-style: none;
     display: inline-block;
+    margin-right: 80px;
+}
+
+header nav li:last-child {
+    border: 1px solid #fff;
+    border-radius: 3px; 
+    padding: 10px 30px 10px 30px;
+}
+
+
+header nav li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    
+     
+}
+
+header nav ul {
+    padding-right: 80px;
+    margin: 0;
+    margin-top: 20px;
 }
 
 section#topo {
@@ -35,4 +60,14 @@ section#topo {
     height: 700px;
     background-size: cover;
     
+}
+
+@media (max-width:600px){
+    header nav {
+        display: none;
+    }
+    header h1 {
+        margin-left: 20px;
+        
+    }
 }
