--- a/pm-proj007/estilo.css
+++ b/pm-proj007/estilo.css
@@ -9,6 +9,22 @@ body{
     display: flex;
     justify-content: space-between;
 }
+.botao{
+    background-color: #ff397e;
+    display: block;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 36px;
+    box-shadow: 0px 6px 0px 0px #a32751;
+    border-radius: 3px;
+    text-align: center
+    
+}
+
+
+
 
 header{
     margin-bottom: -90px;
@@ -55,12 +71,70 @@ header nav ul {
     margin-top: 20px;
 }
 
+
+
 section#topo {
     background-image: url(images/fundo.png);
     height: 700px;
     background-size: cover;
     
 }
+
+section#topo .chamada {  
+    color: #fff;
+    margin-top: 200px;
+    text-align: center;
+}
+
+
+section#topo .chamada h2 {
+    font-size: 50px;
+    margin: 0;
+    margin-bottom: 10px;
+} 
+
+section#topo .chamada p {
+    font-size: 36px;  
+    margin: 0;
+    margin-bottom: 20px;
+}
+
+section#topo .chamada a {
+    background-color: #ff397e;
+}
+
+
+
+
+
+
+section#conheca{
+    padding: 70px;
+}
+
+section#conheca .texto {
+    padding: 70px;
+    padding-top: 30px;
+    padding-right: 30px;
+}
+
+section#conheca .texto h2 {
+    font-size: 36px;
+}
+
+section#conheca .texto p {
+    font-size: 24px;
+}
+
+
+section#conheca .texto a {
+    width: 70%;
+    font-size: 30px;
+}
+
+
+
+
 
 @media (max-width:600px){
     header nav {
@@ -71,3 +145,4 @@ section#topo {
         
     }
 }
+
