--- a/pm-proj007/estilo.css
+++ b/pm-proj007/estilo.css
@@ -106,8 +106,6 @@ section#topo .chamada a {
 
 
 
-
-
 section#conheca{
     padding: 70px;
 }
@@ -130,6 +128,41 @@ section#conheca .texto p {
 section#conheca .texto a {
     width: 70%;
     font-size: 30px;
+}
+
+
+
+section# .depoimento {
+    background-color: #ebe8fb;
+    border-top: 4px solid #511099;
+}
+    
+section#depoimento .container {
+    flex-direction: column;   
+    align-items: center;
+    padding: 70px;
+    padding-bottom: 50px;
+}
+
+section#depoimento img {
+     width: 150px;
+     height: 150px;
+     
+}
+
+
+section#depoimento p {
+     font-size: 24px;
+    width: 80%;
+    text-align: center;
+     
+}
+
+
+
+
+section#convite{
+    padding: 70px;
 }
 
 
