--- a/pm-proj008/estilo.css
+++ b/pm-proj008/estilo.css
@@ -1,5 +1,45 @@
+body {
+    display: flex;
+    background-color: #f5f5f5;
+    
+}
+
 aside {
     
-    width: 200 px;
+    width: 200px;
     background-color: #242536;
 }
+
+section#principal {
+    width:100%;
+    
+}
+
+section#principal header {
+    height: 60px;
+    background-color: #242536;
+}
+
+section#principal .modulo .abas {
+    height: 60px;
+    background-color: #fff;
+    border-bottom: 1px solid #e6e6e6;
+}
+
+section#principal .modulo .container {
+    height: 300px;
+    padding: 20px;
+   
+}
+    
+    
+section#principal .modulo .container .canvas {
+    height: 300px;
+    background-color:ffff;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+}
+    
+    
+    
+    
