--- a/pm-proj008/estilo.css
+++ b/pm-proj008/estilo.css
@@ -10,6 +10,28 @@ aside {
     background-color: #242536;
 }
 
+aside h1 {
+    background-image:url(imgs/nucliot-logo.png);
+    background-repeat: no-repeat;
+    margin: 0;
+    height: 60px;
+    background-position: center;
+    background-color: #141524;
+}
+
+aside h1 span {
+    visibility: hidden;
+    
+}
+
+aside li {
+    list-style: none;
+}
+
+aside li a {
+    text-decoration: none;
+    color: #fff;        
+}
 section#principal {
     width:100%;
     
@@ -29,13 +51,13 @@ section#principal .modulo .abas {
 section#principal .modulo .container {
     height: 300px;
     padding: 20px;
-   
+    
 }
     
     
 section#principal .modulo .container .canvas {
     height: 300px;
-    background-color:ffff;
+    background-color: #fff;
     border: 1px solid #e6e6e6;
     border-radius: 5px;
 }
